rabbitmq-management.yml
# This is a sample RabbitMQ cluster configuration file.
# The RabbitMQ cluster is deployed with a single node on port 15672, management plugin is enabled.
# Image are pulled from the official RabbitMQ image (default).
# resources are lower than the default values to save resources.
# Network are configured to use ClusterIP for internal access, external access via Traefik.

apiVersion: rabbitmq.com/v1beta1
kind: RabbitmqCluster
metadata:
  name: rabbitmq-management
  namespace: rabbitmq-system
spec:
  replicas: 1
  rabbitmq:
    additionalConfig: |
      management.tcp.port = 15672
      default_user = secretUser
      default_pass = secretPassword
  resources:
    requests:
      memory: "256Mi"
      cpu: "100m"
    limits:
      memory: "256Mi"
      cpu: "200m"

# ---
# # Service configuration for RabbitMQ
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management
  namespace: rabbitmq-system
  labels:
    app: rabbitmq-management
spec:
  type: ClusterIP
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
  selector:
    app: rabbitmq-management
